force-app/main/default/objects/Formulario__c/fields/Entrenamiento_de_fuerza__c.field-meta.xml
<CustomField>
    <fullName>Entrenamiento_de_fuerza__c</fullName>
    <label>Entrenamiento de fuerza</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Si</fullName>
                <default>true</default>
                <label>Si</label>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>