force-app/main/default/objects/Formulario__c/fields/Entrenamiento_de_manejo_de_APM__c.field-meta.xml
<CustomField>
    <fullName>Entrenamiento_de_manejo_de_APM__c</fullName>
    <label>Entrenamiento de manejo de APM</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ninguno</fullName>
            </value>
            <value>
                <fullName>Si</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>