force-app/main/default/objects/Formulario__c/fields/Entrenamiento_de_manejo_de_SDR__c.field-meta.xml
<CustomField>
    <fullName>Entrenamiento_de_manejo_de_SDR__c</fullName>
    <description>Entrenamiento de manejo de Silla de Ruedas</description>
    <inlineHelpText>Silla de Ruedas</inlineHelpText>
    <label>Entrenamiento de manejo de SDR</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Si</fullName>
                <default>true</default>
                <label>Si</label>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>