force-app/main/default/objects/Formulario__c/fields/EPICRISIS__c.field-meta.xml
<CustomField>
    <fullName>EPICRISIS__c</fullName>
    <label>EPICRISIS BEST CARE</label>
    <length>1</length>
    <type>Text</type>
</CustomField>