force-app/main/default/objects/Formulario__c/fields/EPOC__c.field-meta.xml
<CustomField>
    <fullName>EPOC__c</fullName>
    <defaultValue>false</defaultValue>
    <label>EPOC</label>
    <type>Checkbox</type>
</CustomField>