force-app/main/default/objects/Formulario__c/fields/EQ5D_ndice_actual__c.field-meta.xml
<CustomField>
    <fullName>EQ5D_ndice_actual__c</fullName>
    <label>EQ5D índice actual</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>