force-app/main/default/objects/Formulario__c/fields/Equilibrio_de_tronco__c.field-meta.xml
<CustomField>
    <fullName>Equilibrio_de_tronco__c</fullName>
    <label>Equilibrio de tronco</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Si</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>