force-app/main/default/objects/Formulario__c/fields/Escaras__c.field-meta.xml
<CustomField>
    <fullName>Escaras__c</fullName>
    <label>Escaras</label>
    <length>255</length>
    <type>Text</type>
</CustomField>