force-app/main/default/objects/Formulario__c/fields/Escaras_examen_medico__c.field-meta.xml
<CustomField>
    <fullName>Escaras_examen_medico__c</fullName>
    <label>Escaras</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Si</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>I</fullName>
            </value>
            <value>
                <fullName>II</fullName>
            </value>
            <value>
                <fullName>III</fullName>
            </value>
            <value>
                <fullName>IV</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>