force-app/main/default/objects/Formulario__c/fields/Escolarizado__c.field-meta.xml
<CustomField>
    <fullName>Escolarizado__c</fullName>
    <label>Escolarizado</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Si</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>