force-app/main/default/objects/Formulario__c/fields/Especificar_DAM__c.field-meta.xml
<CustomField>
    <fullName>Especificar_DAM__c</fullName>
    <description>Espacio para que complete el kinesiólogo sobre el DAM (Dispositivo de Ayuda para la Marcha)</description>
    <inlineHelpText>Espacio para que complete el kinesiólogo sobre el DAM (Dispositivo de Ayuda para la Marcha)</inlineHelpText>
    <label>Especificar</label>
    <type>TextArea</type>
</CustomField>