force-app/main/default/objects/Formulario__c/fields/Estado_actual__c.field-meta.xml
<CustomField>
    <fullName>Estado_actual__c</fullName>
    <label>Estado actual</label>
    <type>TextArea</type>
</CustomField>