force-app/main/default/objects/Formulario__c/fields/Estado_Actual_medico__c.field-meta.xml
<CustomField>
    <fullName>Estado_Actual_medico__c</fullName>
    <label>Estado Actual</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Buen estado general</fullName>
            </value>
            <value>
                <fullName>Regular estado general</fullName>
            </value>
            <value>
                <fullName>Mal estado general</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>