force-app/main/default/objects/Formulario__c/fields/Estado_de_consciencia__c.field-meta.xml
<CustomField>
    <fullName>Estado_de_consciencia__c</fullName>
    <label>Estado de consciencia</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Lúcido</fullName>
            </value>
            <value>
                <fullName>Vigil</fullName>
            </value>
            <value>
                <fullName>Obnubilado</fullName>
            </value>
            <value>
                <fullName>Coma</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>