force-app/main/default/objects/Formulario__c/fields/Estado_de_hidratacion__c.field-meta.xml
<CustomField>
    <fullName>Estado_de_hidratacion__c</fullName>
    <label>Estado de hidratación</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Normohidratado</fullName>
            </value>
            <value>
                <fullName>Sobrehidratado/Edemas</fullName>
            </value>
            <value>
                <fullName>Deshidratado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>