force-app/main/default/objects/Formulario__c/fields/Estado_de_Historia_Clinica__c.field-meta.xml
<CustomField>
    <fullName>Estado_de_Historia_Clinica__c</fullName>
    <label>Estado de Historia Clinica</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Edición</fullName>
                <default>true</default>
                <label>Edición</label>
            </value>
            <value>
                <fullName>Definitivo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>