force-app/main/default/objects/Formulario__c/fields/Estado_de_la_piel__c.field-meta.xml
<CustomField>
    <fullName>Estado_de_la_piel__c</fullName>
    <label>Estado de la piel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Normal</fullName>
            </value>
            <value>
                <fullName>Lesiones</fullName>
            </value>
            <value>
                <fullName>UPP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>