force-app/main/default/objects/Formulario__c/fields/Estado_del_acceso_enteral__c.field-meta.xml
<CustomField>
    <fullName>Estado_del_acceso_enteral__c</fullName>
    <label>Estado del acceso enteral</label>
    <type>TextArea</type>
</CustomField>