force-app/main/default/objects/Formulario__c/fields/Estado_del_consentimiento__c.field-meta.xml
<CustomField>
    <fullName>Estado_del_consentimiento__c</fullName>
    <defaultValue>&apos;Pendiente&apos;</defaultValue>
    <label>Estado del consentimiento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>En curso</fullName>
                <default>true</default>
                <label>En curso</label>
            </value>
            <value>
                <fullName>Acepto</fullName>
                <label>Aceptó</label>
            </value>
            <value>
                <fullName>Rechazo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>