force-app/main/default/objects/Formulario__c/fields/Estado_del_Paciente__c.field-meta.xml
<CustomField>
    <fullName>Estado_del_Paciente__c</fullName>
    <formula>TEXT(Nombre_y_Apellido_del_Paciente__r.Estado_de_paciente__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estado del Paciente</label>
    <type>Text</type>
</CustomField>