force-app/main/default/objects/Formulario__c/fields/Estado_nutricional__c.field-meta.xml
<CustomField>
    <fullName>Estado_nutricional__c</fullName>
    <label>Estado nutricional</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Normonutrido</fullName>
            </value>
            <value>
                <fullName>Riesgo de desnutrición</fullName>
            </value>
            <value>
                <fullName>Desnutrido</fullName>
            </value>
            <value>
                <fullName>Sobrepeso</fullName>
            </value>
            <value>
                <fullName>Obesidad</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>