force-app/main/default/objects/Formulario__c/fields/Estimado__c.field-meta.xml
<CustomField>
    <fullName>Estimado__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Estimado</label>
    <type>Checkbox</type>
</CustomField>