force-app/main/default/objects/Formulario__c/fields/Evaluaci_n_de_la_degluci_n__c.field-meta.xml
<CustomField>
    <fullName>Evaluaci_n_de_la_degluci_n__c</fullName>
    <label>Evaluación de la deglución</label>
    <type>TextArea</type>
</CustomField>