force-app/main/default/objects/Formulario__c/fields/FAL__c.field-meta.xml
<CustomField>
    <fullName>FAL__c</fullName>
    <label>FAL</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>