force-app/main/default/objects/Formulario__c/fields/Familia_poco_comprometida__c.field-meta.xml
<CustomField>
    <fullName>Familia_poco_comprometida__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Familia poco comprometida</label>
    <type>Checkbox</type>
</CustomField>