force-app/main/default/objects/Formulario__c/fields/Familiar_cuidador_entrevistado__c.field-meta.xml
<CustomField>
    <fullName>Familiar_cuidador_entrevistado__c</fullName>
    <label>Familiar/cuidador entrevistado</label>
    <type>TextArea</type>
</CustomField>