force-app/main/default/objects/Formulario__c/fields/Familiares_o_convivientes__c.field-meta.xml
<CustomField>
    <fullName>Familiares_o_convivientes__c</fullName>
    <label>Familiares o convivientes</label>
    <type>TextArea</type>
</CustomField>