force-app/main/default/objects/Formulario__c/fields/FC__c.field-meta.xml
<CustomField>
    <fullName>FC__c</fullName>
    <inlineHelpText>Latidos por minuto</inlineHelpText>
    <label>FC (lpm)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>