force-app/main/default/objects/Formulario__c/fields/Fecha_de_carga_del_peso__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_carga_del_peso__c</fullName>
    <label>Fecha de carga del peso</label>
    <type>Date</type>
</CustomField>