force-app/main/default/objects/Formulario__c/fields/Fecha_de_la_medici_n__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_la_medici_n__c</fullName>
    <label>Fecha de la medición</label>
    <type>Date</type>
</CustomField>