force-app/main/default/objects/Formulario__c/fields/Fecha_de_Ultima_Internaci_n__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_Ultima_Internaci_n__c</fullName>
    <label>Fecha de Ultima Internación</label>
    <type>Date</type>
</CustomField>