force-app/main/default/objects/Formulario__c/fields/Fecha_Laboratorio__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Laboratorio__c</fullName>
    <label>Fecha Laboratorio</label>
    <type>Date</type>
</CustomField>