force-app/main/default/objects/Formulario__c/fields/Fecha_nacimiento__c.field-meta.xml
<CustomField>
    <fullName>Fecha_nacimiento__c</fullName>
    <formula>Nombre_y_Apellido_del_Paciente__r.PersonContact.Birthdate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fecha nacimiento</label>
    <type>Date</type>
</CustomField>