force-app/main/default/objects/Formulario__c/fields/Fecha_ultimo_recambio__c.field-meta.xml
<CustomField>
    <fullName>Fecha_ultimo_recambio__c</fullName>
    <label>Fecha último recambio</label>
    <type>Date</type>
</CustomField>