force-app/main/default/objects/Formulario__c/fields/Fecha_y_hora_de_la_visita_virtual__c.field-meta.xml
<CustomField>
    <fullName>Fecha_y_hora_de_la_visita_virtual__c</fullName>
    <label>Fecha y hora de la visita virtual</label>
    <type>DateTime</type>
</CustomField>