force-app/main/default/objects/Formulario__c/fields/Foco_motor_sensitivo__c.field-meta.xml
<CustomField>
    <fullName>Foco_motor_sensitivo__c</fullName>
    <label>Foco motor / sensitivo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>