force-app/main/default/objects/Formulario__c/fields/Fonoaudiolog_a__c.field-meta.xml
<CustomField>
    <fullName>Fonoaudiolog_a__c</fullName>
    <label>Fonoaudiología</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Si</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>