force-app/main/default/objects/Formulario__c/fields/Formula__c.field-meta.xml
<CustomField>
    <fullName>Formula__c</fullName>
    <label>Fórmula</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Polimérica</fullName>
            </value>
            <value>
                <fullName>Polimérica con fibra</fullName>
            </value>
            <value>
                <fullName>Polimérica con reducción de HC</fullName>
            </value>
            <value>
                <fullName>Semielemental</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>