force-app/main/default/objects/Formulario__c/fields/Formula_historia_seguimiento__c.field-meta.xml
<CustomField>
    <fullName>Formula_historia_seguimiento__c</fullName>
    <label>Fórmula</label>
    <length>50</length>
    <type>Text</type>
</CustomField>