force-app/main/default/objects/Formulario__c/fields/Fosforo__c.field-meta.xml
<CustomField>
    <fullName>Fosforo__c</fullName>
    <label>Fósforo (mg/dl)</label>
    <precision>11</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>