force-app/main/default/objects/Formulario__c/fields/FR__c.field-meta.xml
<CustomField>
    <fullName>FR__c</fullName>
    <inlineHelpText>Respiraciones por minuto</inlineHelpText>
    <label>FR (rpm)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>