force-app/main/default/objects/Formulario__c/fields/Fuga_deperiostomia_por__c.field-meta.xml
<CustomField>
    <fullName>Fuga_deperiostomia_por__c</fullName>
    <label>Fuga deperiostomia por</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fuga periostoma</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>