force-app/main/default/objects/Formulario__c/fields/Funcionamiento_correcto_del_equipo__c.field-meta.xml
<CustomField>
    <fullName>Funcionamiento_correcto_del_equipo__c</fullName>
    <label>Funcionamiento correcto del equipo</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Si</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>