force-app/main/default/objects/Formulario__c/fields/Funcionamiento_de_la_BIC_enf__c.field-meta.xml
<CustomField>
    <fullName>Funcionamiento_de_la_BIC_enf__c</fullName>
    <label>Funcionamiento de la BIC ¿Comprende?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Si</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>