force-app/main/default/objects/Formulario__c/fields/G_prote_nas_KG_peso_d_a__c.field-meta.xml
<CustomField>
    <fullName>G_prote_nas_KG_peso_d_a__c</fullName>
    <label>G proteínas/Kg peso /día</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>