force-app/main/default/objects/Formulario__c/fields/g_proteinas_Kg__c.field-meta.xml
<CustomField>
    <fullName>g_proteinas_Kg__c</fullName>
    <formula>Aporte_proteico_g_d_a__c  /  Peso__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>g proteinas/Kg</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>