force-app/main/default/objects/Formulario__c/fields/Gastrostomia__c.field-meta.xml
<CustomField>
    <fullName>Gastrostomia__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Gastrostomía</label>
    <type>Checkbox</type>
</CustomField>