force-app/main/default/objects/Formulario__c/fields/Glucemia__c.field-meta.xml
<CustomField>
    <fullName>Glucemia__c</fullName>
    <label>Glucemia</label>
    <length>20</length>
    <type>Text</type>
</CustomField>