force-app/main/default/objects/Formulario__c/fields/Glucosa__c.field-meta.xml
<CustomField>
    <fullName>Glucosa__c</fullName>
    <label>Glucosa</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>