force-app/main/default/objects/Formulario__c/fields/GR__c.field-meta.xml
<CustomField>
    <fullName>GR__c</fullName>
    <defaultValue>0</defaultValue>
    <label>GR</label>
    <precision>11</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>