force-app/main/default/objects/Formulario__c/fields/Grado__c.field-meta.xml
<CustomField>
    <fullName>Grado__c</fullName>
    <label>Grado</label>
    <length>20</length>
    <type>Text</type>
</CustomField>