force-app/main/default/objects/Formulario__c/fields/Grado_escara__c.field-meta.xml
<CustomField>
    <fullName>Grado_escara__c</fullName>
    <label>Grado escara</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>I</fullName>
            </value>
            <value>
                <fullName>II</fullName>
            </value>
            <value>
                <fullName>III</fullName>
            </value>
            <value>
                <fullName>IV</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>