force-app/main/default/objects/Formulario__c/fields/Gramos_de_polvo_d_a__c.field-meta.xml
<CustomField>
    <fullName>Gramos_de_polvo_d_a__c</fullName>
    <label>Gramos de polvo/día</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>