force-app/main/default/objects/Formulario__c/fields/HB_Harris_Benedict__c.field-meta.xml
<CustomField>
    <fullName>HB_Harris_Benedict__c</fullName>
    <label>HB (Harris Benedict)</label>
    <length>20</length>
    <type>Text</type>
</CustomField>