force-app/main/default/objects/Formulario__c/fields/HDL__c.field-meta.xml
<CustomField>
    <fullName>HDL__c</fullName>
    <label>HDL</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>