force-app/main/default/objects/Formulario__c/fields/Hematocrito__c.field-meta.xml
<CustomField>
    <fullName>Hematocrito__c</fullName>
    <label>Hematocrito</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>