force-app/main/default/objects/Formulario__c/fields/Hemoglobina__c.field-meta.xml
<CustomField>
    <fullName>Hemoglobina__c</fullName>
    <label>Hemoglobina (g/dl)</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>