force-app/main/default/objects/Formulario__c/fields/HG__c.field-meta.xml
<CustomField>
    <fullName>HG__c</fullName>
    <defaultValue>0</defaultValue>
    <label>HG</label>
    <precision>11</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>