force-app/main/default/objects/Formulario__c/fields/Hidratacion_Adecuada__c.field-meta.xml
<CustomField>
    <fullName>Hidratacion_Adecuada__c</fullName>
    <label>Hidratacion Adecuada</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Si</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>