force-app/main/default/objects/Formulario__c/fields/Hipotiroidismo__c.field-meta.xml
<CustomField>
    <fullName>Hipotiroidismo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hipotiroidismo</label>
    <type>Checkbox</type>
</CustomField>