force-app/main/default/objects/Formulario__c/fields/Horarios_estimados_de_administraci_n__c.field-meta.xml
<CustomField>
    <fullName>Horarios_estimados_de_administraci_n__c</fullName>
    <label>Horarios estimados de administración</label>
    <type>TextArea</type>
</CustomField>