force-app/main/default/objects/Formulario__c/fields/HTA__c.field-meta.xml
<CustomField>
    <fullName>HTA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HTA</label>
    <type>Checkbox</type>
</CustomField>