force-app/main/default/objects/Formulario__c/fields/HTO__c.field-meta.xml
<CustomField>
    <fullName>HTO__c</fullName>
    <label>HTO</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>