force-app/main/default/objects/Formulario__c/fields/Hubo_cambios_en_la_forma_de_comer__c.field-meta.xml
<CustomField>
    <fullName>Hubo_cambios_en_la_forma_de_comer__c</fullName>
    <label>Hubo cambios en la forma de comer?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sí</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>