force-app/main/default/objects/Formulario__c/fields/Hubo_p_rdida_de_peso__c.field-meta.xml
<CustomField>
    <fullName>Hubo_p_rdida_de_peso__c</fullName>
    <label>Hubo pérdida de peso?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sí</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>