force-app/main/default/objects/Formulario__c/fields/IAM__c.field-meta.xml
<CustomField>
    <fullName>IAM__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IAM</label>
    <type>Checkbox</type>
</CustomField>