force-app/main/default/objects/Formulario__c/fields/IC__c.field-meta.xml
<CustomField>
    <fullName>IC__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IC</label>
    <type>Checkbox</type>
</CustomField>