force-app/main/default/objects/Formulario__c/fields/IMC__c.field-meta.xml
<CustomField>
    <fullName>IMC__c</fullName>
    <formula>Peso__c  /  ((Talla__c/100) ^ 2)</formula>
    <label>IMC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>