force-app/main/default/objects/Formulario__c/fields/Incapacidad_de_ingesta__c.field-meta.xml
<CustomField>
    <fullName>Incapacidad_de_ingesta__c</fullName>
    <label>Incapacidad de ingesta</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Trastorno deglutorio</fullName>
            </value>
            <value>
                <fullName>Traqueostomía /ARM</fullName>
            </value>
            <value>
                <fullName>Gastroparesia</fullName>
            </value>
            <value>
                <fullName>Gastroparecia</fullName>
                <isActive>false</isActive>
                <label>Gastroparecia</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>