force-app/main/default/objects/Formulario__c/fields/Independiente__c.field-meta.xml
<CustomField>
    <fullName>Independiente__c</fullName>
    <label>Independiente</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Si</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>