force-app/main/default/objects/Formulario__c/fields/Indicaci_n_del_APM__c.field-meta.xml
<CustomField>
    <fullName>Indicaci_n_del_APM__c</fullName>
    <inlineHelpText>Ayuda para la marcha</inlineHelpText>
    <label>Indicación de APM</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Si</fullName>
                <default>true</default>
                <label>Si</label>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>