force-app/main/default/objects/Formulario__c/fields/Indicaciones__c.field-meta.xml
<CustomField>
    <fullName>Indicaciones__c</fullName>
    <label>Indicaciones</label>
    <type>TextArea</type>
</CustomField>