force-app/main/default/objects/Formulario__c/fields/Inferiores_Sacro__c.field-meta.xml
<CustomField>
    <fullName>Inferiores_Sacro__c</fullName>
    <label>Inferiores/Sacro</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Leve</fullName>
            </value>
            <value>
                <fullName>Moderada</fullName>
            </value>
            <value>
                <fullName>Severa</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>