force-app/main/default/objects/Formulario__c/fields/Infusi_n__c.field-meta.xml
<CustomField>
    <fullName>Infusi_n__c</fullName>
    <defaultValue>&quot;&quot;</defaultValue>
    <label>Infusión</label>
    <type>TextArea</type>
</CustomField>