force-app/main/default/objects/Formulario__c/fields/Ingesta_insuficiente__c.field-meta.xml
<CustomField>
    <fullName>Ingesta_insuficiente__c</fullName>
    <label>Ingesta insuficiente</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Hiporexia</fullName>
            </value>
            <value>
                <fullName>Deterioro del sensorio</fullName>
            </value>
            <value>
                <fullName>Trastorno en la masticacion</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>